# Compose

./: .gitignore  LICENSE  README.md  compose.md  pyproject.toml
.github/workflows/: release.yml
docs/: agents.md  async.md  budgets.md  chats.md  composition.md  flows.md  index.md  mcp.md  observability.md  providers.md  testing.md  typing.md
examples/: quickstart_agent.py  research_flow.py  streaming_chat.py
scripts/: release.sh
src/composeai/: __init__.py  _dispatch.py  _encoding.py  _ids.py  _runtime.py  _schema.py  _storeasync.py  agentfn.py  chat.py  cli.py  combinators.py  errors.py  events.py  flow.py  hitl.py  interception.py  mcp.py  messages.py  runs.py  testing.py  tools.py  tracing.py
src/composeai/models/: __init__.py  anthropic.py  base.py  compatible.py  openai.py  prices.py  registry.py
tests/: conftest.py  test_agent.py  test_agent_cache.py  test_anthropic.py  test_async_surface.py  test_budget.py  test_cassettes.py  test_chat.py  test_cli.py  test_combinators.py  test_compatible.py  test_context_manager.py  test_dispatch.py  test_encoding.py  test_engine_async.py  test_errors.py  test_events.py  test_flow.py  test_hitl_agent.py  test_hitl_flow.py  test_hitl_subprocess.py  test_ids.py  test_inline_approval.py  test_interception.py  test_live_smoke.py  test_mcp.py  test_mcp_e2e.py  test_messages.py  test_models_base.py  test_nested_combinators.py  test_openai.py  test_overrides.py  test_package.py  test_prices.py  test_registry.py  test_render.py  test_resume_subprocess.py  test_runstore.py  test_runtime.py  test_schema_register.py  (+10 more)
tests/conformance/: contract.py
tests/fixtures/: mcp_fixture_server.py  subprocess_flow_defs.py  subprocess_hitl_agent_defs.py  subprocess_hitl_agent_run_a.py  subprocess_hitl_agent_run_b.py  subprocess_hitl_flow_defs.py  subprocess_hitl_run_a.py  subprocess_hitl_run_a_async.py  subprocess_hitl_run_b.py  subprocess_hitl_run_b_async.py  subprocess_nested_pipe_hitl_flow_defs.py  subprocess_nested_pipe_hitl_run_a.py  subprocess_nested_pipe_hitl_run_b.py  subprocess_run_a.py  subprocess_run_b.py
