[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "composeai"
version = "0.4.1"
description = "Multi-agent workflows as typed Python functions — wiring checked before any API call, always-on local tracing, durable flows, enforced budgets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pydantic>=2.7"]

[project.scripts]
compose = "composeai.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.60"]
mcp = ["mcp>=1.27,<2"]
all = ["composeai[anthropic,openai,mcp]"]
dev = ["pytest>=8", "ruff>=0.5", "pyright>=1.1.380", "anthropic>=0.40", "openai>=1.60", "mcp>=1.27,<2", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/composeai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
